[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightnow-cli"
version = "1.0.3"
description = "Official LightNow CLI for MCP registry discovery, client config sync, and local MCP runner workflows"
authors = [{name = "LightNow Team"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["lightnow", "mcp", "model-context-protocol", "registry", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyjwt>=2.8.0",
    "jsonschema>=4.17.0",
    "pyyaml>=6.0.0",
    "truststore>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "build>=1.2.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
lightnow = "lightnow_cli.main:cli"

[project.urls]
Homepage = "https://github.com/lightnow-ai/lightnow-cli"
Repository = "https://github.com/lightnow-ai/lightnow-cli"

[tool.hatch.version]
path = "lightnow_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["lightnow_cli"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=lightnow_cli --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
